# parangonar

./: .gitignore  CMakeLists.txt  CPP_MIGRATION_SUMMARY.md  README.md  README_old.md  WASM_EXAMPLE.md  example.html  parangonar.js  parangonar.wasm  requirements.txt  setup.py  validate_cpp_port.py
build_test_emscripten/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
cpp/: README.md
cpp/include/parangonar/: dtw.hpp  match_parser.hpp  matchers.hpp  note.hpp  preprocessors.hpp
cpp/src/: dtw.cpp  match_parser.cpp  matchers.cpp  note.cpp  preprocessors.cpp  wasm_bindings.cpp
cpp/tests/: test_matchers.cpp  test_mozart_alignment.cpp  test_wasm_api.cpp
parangonar/: __init__.py
parangonar/dp/: __init__.py
parangonar/evaluate/: __init__.py
parangonar/match/: __init__.py  matchers.py  preprocessors.py
tests/: test_note_align.py
